# embersight

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_MASTER_PLAN.md  NEXT_STEPS.md  README.md  index.html  start.sh  styles.css
.claude/: settings.json
agent/: pyproject.toml
agent/src/embersight_agent/: __init__.py  graph.py  hitl.py  main.py  state.py
agent/src/embersight_agent/agents/: __init__.py  _stub.py  evacuation_intelligence.py  master_ic.py  master_ic_chat.py  resource_recommendation.py  routing_staging.py  spread_simulation.py  terrain_fuel.py  tools.py  values_at_risk.py  weather_wind.py
agent/src/embersight_agent/prompts/: evacuation_intelligence.md  fban.md  master_ic.md  master_ic_chat.md  resource_recommendation.md  routing_staging.md  spread_simulation.md  terrain_fuel.md  values_at_risk.md
agent/src/embersight_agent/tools/: __init__.py  buildings.py  calfire.py  evac.py  firms.py  herbie_wx.py  infra.py  landfire.py  llm_stream.py  nws.py  overpass.py  pyretechnics_spread.py  rally_points.py  routing.py  seed_demo.py  synoptic_raws.py  wfigs_perimeter.py  zone_catalog.py
agent/tests/: test_inter_agent_contracts.py
web/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/components/: DevPanel.tsx  Markdown.tsx  ThemeApplier.tsx
web/app/dashboard/: page.tsx
web/lib/: infraLayers.ts  infraQueries.ts  queries.ts  sse.ts  store.ts  testMode.ts  testModeServer.ts  theme.ts
web/public/landing/: index.html  intro-fire.js  script.js  styles.css
(+25 files in other folders)
